# rclgo

./: .gitignore  .gitmessage  .golangci.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  changelog.sh  gen_cgo_flags.sh  gen_msgs.sh  generate.sh  go.mod  go.sum  goland.env
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  main.yaml  sync-helper.yml
cmd/rclgo-gen/: main.go
cmd/rclgo-gen/cmd/: generate.go  generate_cgo_flags.go
docs/: BRANCHING.md  LOGGING_IMPROVEMENTS.md  RELEASING.md  WORKFLOW.md  overview.md  parameters.md  qos.md  rostime.md
docs/workflows/: MULTI_DISTRO_WORKFLOW.md
examples/clock_demo/: CMakeLists.txt  README.md  go.mod  main.go  package.xml  params.yaml
examples/param_demo/: CMakeLists.txt  README.md  go.mod  go.sum  main.go  package.xml  params.yaml
examples/publisher_subscriber/: README.md  cgo-flags.env  generate.go  go.mod  go.sum
internal/msgs/: msgs.gen.go
pkg/gogen/: gogen.go  parser_test.go
pkg/msgs/: msgs.gen.go
pkg/rclgo/: action.go  action_test.go  context.go  context_test.go  dynamic.go  errortypes.gen.go  example_action_client_test.go  example_action_server_test.go  example_action_server_type_safe_wrapper_test.go  flags.gen.go  graph.go  logging.go  logginghandler.go  node_test.go  pubsub_test.go  qos.go  qos_profiles.go  rcl.go  rcl_test.go  service_test.go
scripts/: README.md  clean.sh  doRelease.sh  finishRelease.sh  git-rclgo.sh  init.sh  local-ci.sh  startRelease.sh  sync-feature.sh  test-all-distros.sh
test/: typemap_test.go
test/gogen/: serdes_simple_fixtures.go  serdes_test.go  serdes_test_msgs_fixtures.go
tests/gogen/: flags.gen.go
tests/logging/: README.md  TEST_RESULTS.md  test_env_vars.sh  test_multi_node.launch.py  test_script_launch.sh  test_single_node.launch.py
tools/shimgen/: main.go
(+748 files in other folders)
