<?xml version="1.0"?>
<package format="3">
    <name>rclgo_clock_demo_pkg</name>
    <version>0.1.0</version>
    <description>Installs the rclgo examples/clock_demo as a ROS 2 executable</description>

    <maintainer email="you@example.com">Your Name</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- runtime: you just need a ROS 2 environment sourced -->
    <exec_depend>ros2cli</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
